--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 /*menu*/
 
 .content {
-    padding: 50px;
+    padding: 50px; /*preenchimento*/
     width: 100vw;
     height: 70px;
     display: flex;
@@ -90,26 +90,147 @@ html {
     font-size: 25px;
 }
 
+.btn-home {
+    width: 250px;
+    height: 60px;
+    background-color: rgb(45, 45, 138);
+    border-radius: 10px;
+    color: white;
+    font-weight: 700px;
+    margin-top: 4rem;
+}
+
+.btn-home a {
+    color: white;
+}
+
+
+#container {
+    padding: 25vh;
+    background-color: rgb(204, 199, 199);
+    flex-wrap: wrap;
+}
+
+#container > h2 { /*chamamos nosso h2 para alteração*/
+    font-size: 40px; /*atribuimos um tamanho a letra*/
+    margin-top: -3em; /*espaçamento*/
+    color: rgb(22, 22, 140, 0.81); /*cor da letra em h2*/
+    text-align: center; /*alinhamento do titulo ao centro*/
+
+}
+
+#container > p { /*aqui chamamos nossa tag P*/
+    font-size: 20px; /*tamanho da letra*/
+    margin-top: 30px; /*espaçamento da letra */
+    color: black; /*cor da letra*/
+    text-align: justify; /*tornando o texto justificavel */
+}
+
+
+#container > button { /*aqui estamos chamando nosso button para estilização*/
+    padding: 20px; /*tamanho do preenchimento*/
+    border-radius: 50px; /*arrendondamento das bordas*/
+    width: 15 vw; /*largura do botão*/
+    color: rgb(0, 0, 255, 0.72); /*cor da letra*/
+    border-color:rgb(0, 0, 255, 0.72); /*cor da borda*/
+    margin: 60px; /*margem externa*/
+    font-size: 15px; /*tamanho da letra*/
+}
+
+#container > button:hover { /*aplicando a estilização ao passar o mouse*/
+    background-color: rgb(0, 0, 255, 0.72); /*cor de fundo*/
+    color: white;  /*cor da letra*/
+    border-color: white; /*cor da borda*/
+    transition: 0.8s; /*tempo de transição*/
+}
+
+
+#cursos {
+    background: linear-gradient(180deg, #0c16a364 8.33%,
+    rgba(5, 39, 101, 0.745) 100%);
+    height: 50rem; /*altura da imagem*/
+    display: flex;  /*alinhar os itens lado a lado*/
+    align-items: center; /*alinhar os itens ao centro*/
+    flex-wrap: wrap; /*adaptando para quebrar em telas menores*/
+
+}
+
+#cursos h2 {
+    font-size: 35px;
+    margin-top: 1em;
+    color: white;
+    text-align: center;
+    margin-left: 13em;
+    }
+
+.text-03 {
+    font-size: 18px;
+    margin-top: 18px;
+    text-align: center;
+    justify-content: center; 
+    margin-left: 28em;
+}
+
+#cursos h3 {
+    font-size: 28px;
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 16em;  
+}
+
+.text-01 {
+    color: white;
+    font-size: 20px;
+    margin-top: 3rem;
+    margin-left: 1em;
+}
+
+.text-02 {
+    margin-left: 1em;
+    margin-top: 0.8rem;
+    font-style: bold; /*estilo da fonte*/
+    height: 15px;
+}
+
 .btn {
     width: 440px;
-    display: flex;
+    display: flex; /*alinhar lado a lado*/
     justify-content: center;
 }
+
+
 
 .btn button {
     width: 250px;
     height: 60px;
-    background-color: rgb(92, 92, 245);
+    background-color: rgb(45, 45, 138);
     border-radius: 10px;
-    color: black;
+    color: white;
     font-weight: 700px;
     margin-top: 4rem;
       
 }
 
 .btn button:hover {
-    border: 1px solid rgb(92, 92, 245);
+    border: 1px solid rgb(45, 45, 138);
     background-color: transparent;
     color:white;
     transition: 0.2s;
 }
+
+
+footer {
+    padding: 5vh; /*preenchimento do rodape*/
+    background-color: rgb(18, 18, 18);  /*cor de fundo*/
+    text-align: center; /*alinhando o texto ao centro*/
+
+}
+
+
+
+.item_footer {
+    color: rgba(255, 252, 252, 0.689);
+    display: flex;
+    justify-content: space-between;
+}
+
